--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <meta name="description" content="Catálogo de recursos para desarrolladores." />
+  <title>Catálogo de recursos para desarrolladores</title>
 
   <!-- Fuentes: Roboto Condensed y Roboto -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
